# AirPlayTV

./: README.md  gradle.properties
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  uxplay_bridge.cpp
app/src/main/java/com/airplaytv/: AirPlayPreferences.kt  AirPlayService.kt  AirPlayStatusState.kt  BootReceiver.kt  DeviceNameDialog.kt  MainActivity.kt  StatusIndicatorView.kt  UxPlayBridge.kt
app/src/main/res/drawable/: bg_button_outline.xml  bg_main.xml  bg_panel.xml  bg_warning.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
